# cpp_oop_labs

./: .gitignore  CMakeLists.txt  README.md
Lab1/: CMakeLists.txt
Lab1/src/: Laba1.cpp  Lb1.h  main.cpp
Lab1/test/: tests.cpp
